--- a/bgchanger/bgchanger.html
+++ b/bgchanger/bgchanger.html
@@ -12,6 +12,7 @@
   <div class="button" id="white"></div>
   <div class="button" id="blue"></div>
   <div class="button" id="yellow"></div>
+  <div class="button" id="purple"></div>
   </div>
   
   <script src="bgchanger.js"></script>
